feat(i18n): add docs page translations and locale config
Add translations for docs page UI elements in both English and Chinese
Centralize locale configuration in routing module
Use next-intl for managing translations in docs layout

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -6,5 +6,15 @@
     "firstStepsDescription": "Just the basics - Everything you need to know to set up your database and authentication.",
     "documentation": "Documentation",
     "documentationDescription": "Learn more about Create T3 App, the libraries it uses, and how to deploy it."
+  },
+  "Docs": {
+    "search": "Search",
+    "searchNoResult": "No results found",
+    "toc": "Table of Contents",
+    "tocNoHeadings": "No headings",
+    "lastUpdate": "Last updated",
+    "chooseLanguage": "Choose Language",
+    "nextPage": "Next Page",
+    "previousPage": "Previous Page"
   }
 }
