--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -6,5 +6,15 @@
     "firstStepsDescription": "基础知识 - 设置数据库和身份验证所需了解的一切。",
     "documentation": "文档",
     "documentationDescription": "了解更多关于 Create T3 App、它使用的库以及如何部署的信息。"
+  },
+  "Docs": {
+    "search": "搜索",
+    "searchNoResult": "没有找到结果",
+    "toc": "目录",
+    "tocNoHeadings": "没有标题",
+    "lastUpdate": "最后更新",
+    "chooseLanguage": "选择语言",
+    "nextPage": "下一页",
+    "previousPage": "上一页"
   }
 }
