feat(auth): add authentication system with zustand store and providers
feat(components): add new ui components including sheet, avatar menu, and theme toggle

feat(navbar): implement responsive navbar with auth integration and mobile menu

feat(i18n): update translations and add common phrases for auth flows

style: reorganize imports and fix formatting across multiple files

chore: update dependencies including radix-ui and zustand

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -16,5 +16,29 @@
     "chooseLanguage": "Choose Language",
     "nextPage": "Next Page",
     "previousPage": "Previous Page"
+  },
+  "common": {
+    "save": "Save",
+    "cancel": "Cancel",
+    "loading": "Loading...",
+    "welcome": "Welcome",
+    "language": "Language",
+    "home": "Home",
+    "back": "Back",
+    "next": "Next",
+    "previous": "Previous",
+    "email": "Email",
+    "password": "Password",
+    "login": "Login",
+    "logout": "Logout",
+    "register": "Register",
+    "forgotPassword": "Forgot Password",
+    "rememberMe": "Remember Me",
+    "or": "or",
+    "continueWith": "Continue with",
+    "alreadyHaveAccount": "Already have an account?",
+    "dontHaveAccount": "Don't have an account?",
+    "signInHere": "Sign in here",
+    "signUpHere": "Sign up here"
   }
 }
