--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -23,15 +23,201 @@
     "signInHere": "Sign in here",
     "signUpHere": "Sign up here"
   },
-  "Docs": {
-    "search": "Search",
-    "searchNoResult": "No results found",
+  "toast": {
+    "success": {
+      "articleCreated": "Article created successfully",
+      "articleUpdated": "Article updated successfully",
+      "articleDeleted": "Article deleted successfully",
+      "operationSuccess": "Operation successful"
+    },
+    "error": {
+      "titleRequired": "Please enter article title",
+      "contentRequired": "Please enter article content",
+      "slugRequired": "Please enter URL slug",
+      "operationFailed": "Operation failed",
+      "deleteFailed": "Delete failed",
+      "submitFailed": "Submit failed, please try again",
+      "retryLater": "Please try again later"
+    }
+  },
+  "nav": {
+    "home": "Home",
+    "docs": "Documentation",
+    "dashboard": "Dashboard",
+    "profile": "Profile",
+    "login": "Login",
+    "logout": "Logout"
+  },
+  "auth": {
+    "login": "Login",
+    "logout": "Logout",
+    "email": "Email",
+    "password": "Password",
+    "signIn": "Sign In",
+    "signUp": "Sign Up",
+    "forgotPassword": "Forgot Password?",
+    "rememberMe": "Remember me",
+    "signInToAccount": "Sign in to your account",
+    "createAccount": "Create a new account",
+    "enterEmail": "Enter your email address",
+    "enterPassword": "Enter your password",
+    "githubSignIn": "Sign in with GitHub",
+    "googleSignIn": "Sign in with Google",
+    "loading": "Verifying identity...",
+    "error": "Authentication Error",
+    "accessDenied": "Access Denied",
+    "loginRequired": "Please login to access this page",
+    "goToLogin": "Go to Login",
+    "retry": "Retry"
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "welcome": "Welcome back! Here's what's happening with your account.",
+    "overview": "Overview",
+    "analytics": "Analytics",
+    "settings": "Settings",
+    "totalRevenue": "Total Revenue",
+    "subscriptions": "Subscriptions",
+    "sales": "Sales",
+    "activeNow": "Active Now",
+    "downloadReport": "Download Report",
+    "addUser": "Add User",
+    "notificationSettings": "Notification Settings",
+    "manageNotifications": "Manage your notification preferences",
+    "newsletterSubscription": "Newsletter Subscription",
+    "manageNewsletter": "Manage your newsletter subscription preferences",
+    "subscribeToNewsletter": "Subscribe to newsletter",
+    "changeAnytime": "You can change your subscription preferences at any time",
+    "emailNotifications": "Email Notifications",
+    "chooseNotifications": "Choose what email notifications you'd like to receive",
+    "marketingEmails": "Marketing emails",
+    "securityAlerts": "Security alerts",
+    "productUpdates": "Product updates",
+    "recentActivity": "Recent Activity",
+    "latestActivity": "Your latest account activity",
+    "articles": {
+      "title": "Article Management",
+      "description": "Manage all your article content",
+      "createArticle": "Create Article",
+      "createDescription": "Create a new article",
+      "editArticle": "Edit Article",
+      "deleteArticle": "Delete Article",
+      "viewArticle": "View Article",
+      "status": "Status",
+      "visibility": "Visibility",
+      "language": "Language",
+      "isPinned": "Pinned",
+      "actions": "Actions",
+      "search": "Search articles...",
+      "filter": "Filter",
+      "all": "All",
+      "draft": "Draft",
+      "published": "Published",
+      "archived": "Archived",
+      "public": "Public",
+      "authenticated": "Authenticated Users",
+      "premium": "Premium Users",
+      "yes": "Yes",
+      "no": "No",
+      "confirmDelete": "Confirm Delete",
+      "deleteConfirmMessage": "Are you sure you want to delete this article? This action cannot be undone.",
+      "cancel": "Cancel",
+      "delete": "Delete",
+      "form": {
+        "title": "Title",
+        "titlePlaceholder": "Enter article title",
+        "slug": "URL Slug",
+        "slugPlaceholder": "url-friendly-slug",
+        "description": "Description",
+        "descriptionPlaceholder": "Article description",
+        "content": "Content",
+        "contentPlaceholder": "Start writing your article...",
+        "coverImage": "Cover Image",
+        "selectCoverImage": "Select Cover Image",
+        "tags": "Tags",
+        "tagsPlaceholder": "Enter tags, press Enter to add",
+        "language": "Language",
+        "status": "Status",
+        "visibility": "Visibility",
+        "isPinned": "Pin Article",
+        "saveDraft": "Save Draft",
+        "publish": "Publish Article",
+        "update": "Update Article",
+        "preview": "Preview",
+        "basicInfo": "Basic Information",
+        "advancedSettings": "Advanced Settings",
+        "contentEditor": "Content Editor"
+      }
+    }
+  },
+  "docs": {
+    "title": "Documentation",
+    "search": "Search documentation...",
     "toc": "Table of Contents",
-    "tocNoHeadings": "No headings",
-    "lastUpdate": "Last updated",
-    "chooseLanguage": "Choose Language",
-    "nextPage": "Next Page",
-    "previousPage": "Previous Page"
+    "editPage": "Edit this page",
+    "lastUpdated": "Last updated",
+    "nextPage": "Next page",
+    "previousPage": "Previous page"
+  },
+  "faq": {
+    "heading": "Frequently asked questions",
+    "description": "Find answers to common questions about our products. Can't find what you're looking for? Contact our support team.",
+    "supportHeading": "Need more support?",
+    "supportDescription": "Our dedicated support team is here to help you with any questions or concerns. Get in touch with us for personalized assistance.",
+    "supportButtonText": "Contact Support",
+    "items": [
+      {
+        "question": "What is the return policy?",
+        "answer": "You can return any item within 30 days of purchase for a full refund, provided it is in its original condition."
+      },
+      {
+        "question": "How do I track my order?",
+        "answer": "Once your order is shipped, you will receive an email with a tracking number. You can use this number on our website to track your order."
+      },
+      {
+        "question": "Do you offer international shipping?",
+        "answer": "Yes, we ship to most countries worldwide. Shipping costs and delivery times vary depending on the destination."
+      },
+      {
+        "question": "Can I change my order after it has been placed?",
+        "answer": "You can change your order within 24 hours of placing it by contacting our customer service team."
+      },
+      {
+        "question": "What payment methods do you accept?",
+        "answer": "We accept all major credit cards, PayPal, and Apple Pay."
+      },
+      {
+        "question": "How can I contact customer support?",
+        "answer": "You can reach our customer support team via email at support@example.com or by calling 1-800-123-4567."
+      },
+      {
+        "question": "Are there any discounts for bulk purchases?",
+        "answer": "Yes, we offer discounts for bulk purchases. Please contact our sales team for more information."
+      }
+    ]
+  },
+  "error": {
+    "notFound": {
+      "title": "Oops! Page Not Found!",
+      "description": "It seems like the page you're looking for does not exist or might have been removed.",
+      "goBack": "Go Back",
+      "backToHome": "Back to Home"
+    }
+  },
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "home": "Home",
+    "analytics": "Analytics",
+    "users": "Users",
+    "documents": "Documents",
+    "files": "File Manager",
+    "articles": "Articles",
+    "billing": "Billing",
+    "security": "Security",
+    "notifications": "Notifications",
+    "settings": "Settings",
+    "profile": "Profile",
+    "userMenu": "User Menu"
   },
   "userMenu": {
     "user": "User",
@@ -41,5 +227,142 @@
     "settings": "Settings",
     "toggleMode": "Toggle mode",
     "logout": "Log out"
+  },
+  "settings": {
+    "title": "Settings",
+    "description": "Manage your account settings and preferences",
+    "profile": {
+      "title": "Profile",
+      "description": "Manage your personal information"
+    },
+    "security": {
+      "title": "Security",
+      "description": "Manage your security settings"
+    },
+    "notifications": {
+      "title": "Notifications",
+      "description": "Manage your notification preferences"
+    },
+    "billing": {
+      "title": "Billing",
+      "description": "Manage your subscription and payments"
+    }
+  },
+  "profile": {
+    "title": "Profile",
+    "description": "Manage your personal information and preferences",
+    "save": "Save",
+    "avatar": {
+      "title": "Your Avatar",
+      "description": "To change your avatar, click on the image in this block and select a file from your computer to upload."
+    },
+    "language": {
+      "title": "Your Language",
+      "description": "To change the language of the application, select a language from the list and click save.",
+      "label": "Language"
+    },
+    "name": {
+      "title": "Your Name",
+      "placeholder": "Enter your name"
+    },
+    "email": {
+      "title": "Your Email",
+      "description": "To change your email, enter a new email and click save. You will need to confirm the new email for it to take effect.",
+      "placeholder": "Enter your email address"
+    }
+  },
+  "billing": {
+    "title": "Billing Settings",
+    "description": "Manage your subscription plans and payment methods",
+    "currentPlan": "Your plan",
+    "changePlan": "Change your plan",
+    "choosePlan": "Choose a plan to subscribe to",
+    "monthly": "Monthly",
+    "yearly": "Yearly",
+    "free": "Free",
+    "pro": "Pro",
+    "lifetime": "Lifetime",
+    "enterprise": "Enterprise",
+    "active": "ACTIVE",
+    "recommended": "Recommended",
+    "bestForTeams": "Best for teams",
+    "buyOnce": "Buy once. Use forever.",
+    "customPlan": "Custom plan tailored to your requirements",
+    "features": {
+      "amazingFeature": "Another amazing feature",
+      "limitedSupport": "Limited support",
+      "fullSupport": "Full support",
+      "noRecurringCosts": "No recurring costs",
+      "extendedSupport": "Extended support",
+      "unlimitedProjects": "Unlimited projects",
+      "enterpriseSupport": "Enterprise support"
+    },
+    "pricing": {
+      "freeTrialDays": "days free trial",
+      "perMonth": "/ month",
+      "contactSales": "Contact sales"
+    },
+    "actions": {
+      "choosePlan": "Choose plan",
+      "contactSales": "Contact sales"
+    }
+  },
+  "security": {
+    "title": "Security",
+    "description": "Manage your security settings",
+    "resetPassword": {
+      "title": "Reset Password",
+      "subtitle": "Reset password to enable email login",
+      "description": "Resetting your password will allow you to sign in using your email and password in addition to your social login methods. You will receive an email with instructions to reset your password",
+      "button": "Reset Password"
+    },
+    "deleteAccount": {
+      "title": "Delete Account",
+      "subtitle": "Permanently remove your account and all of its contents",
+      "description": "This action is not reversible, so please continue with caution",
+      "button": "Delete Account"
+    }
+  },
+  "blog": {
+    "title": "Tech Blog",
+    "description": "Share technical insights, best practices, and development experiences",
+    "backToList": "Back to Blog List",
+    "readingTime": "min read",
+    "aboutReadingTime": "About {time} min read",
+    "noArticles": "No blog articles yet",
+    "shareArticle": "Like this article? Share it with more people!",
+    "backToBlog": "Back to Blog",
+    "author": "Author",
+    "publishedOn": "Published on",
+    "tags": "Tags"
+  },
+  "articles": {
+    "title": "Tech Articles",
+    "description": "Explore the latest technical insights and in-depth analysis",
+    "readMore": "Read More",
+    "backToList": "Back to Article List",
+    "tags": "Tags",
+    "author": "Author",
+    "publishedAt": "Published",
+    "readingTime": "Reading Time",
+    "loginRequired": "This article requires login to view",
+    "premiumRequired": "This article is for premium users only",
+    "allTags": "All Tags",
+    "filterByTag": "Filter by Tag",
+    "noArticles": "No articles available",
+    "loadMore": "Load More",
+    "access": {
+      "loginRequired": "Login Required",
+      "premiumRequired": "Premium Content",
+      "subscriptionExpired": "Subscription Expired",
+      "loginToView": "Please login to view the full content",
+      "upgradeToView": "This content is for premium users only. Upgrade your subscription to unlock",
+      "renewToView": "Your subscription has expired. Please renew to continue accessing premium content",
+      "loginButton": "Login Now",
+      "signupButton": "Sign Up",
+      "upgradeButton": "Upgrade Subscription",
+      "renewButton": "Renew Subscription",
+      "browseFreeButton": "Browse Free Content"
+    }
   }
 }
