--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -23,15 +23,201 @@
     "signInHere": "在此登录",
     "signUpHere": "在此注册"
   },
-  "Docs": {
-    "search": "搜索",
-    "searchNoResult": "没有找到结果",
+  "toast": {
+    "success": {
+      "articleCreated": "文章创建成功",
+      "articleUpdated": "文章更新成功",
+      "articleDeleted": "文章删除成功",
+      "operationSuccess": "操作成功"
+    },
+    "error": {
+      "titleRequired": "请输入文章标题",
+      "contentRequired": "请输入文章内容",
+      "slugRequired": "请输入URL别名",
+      "operationFailed": "操作失败",
+      "deleteFailed": "删除失败",
+      "submitFailed": "提交失败，请重试",
+      "retryLater": "请稍后重试"
+    }
+  },
+  "nav": {
+    "home": "首页",
+    "docs": "文档",
+    "dashboard": "仪表板",
+    "profile": "个人资料",
+    "login": "登录",
+    "logout": "退出"
+  },
+  "auth": {
+    "login": "登录",
+    "logout": "退出",
+    "email": "邮箱",
+    "password": "密码",
+    "signIn": "登录",
+    "signUp": "注册",
+    "forgotPassword": "忘记密码？",
+    "rememberMe": "记住我",
+    "signInToAccount": "登录您的账户",
+    "createAccount": "创建新账户",
+    "enterEmail": "输入您的邮箱地址",
+    "enterPassword": "输入您的密码",
+    "githubSignIn": "使用 GitHub 登录",
+    "googleSignIn": "使用 Google 登录",
+    "loading": "正在验证身份...",
+    "error": "认证错误",
+    "accessDenied": "访问受限",
+    "loginRequired": "请登录后访问此页面",
+    "goToLogin": "前往登录",
+    "retry": "重试"
+  },
+  "dashboard": {
+    "title": "仪表板",
+    "welcome": "欢迎回来！这是您账户的最新动态。",
+    "overview": "概览",
+    "analytics": "分析",
+    "settings": "设置",
+    "totalRevenue": "总收入",
+    "subscriptions": "订阅数",
+    "sales": "销售额",
+    "activeNow": "当前活跃",
+    "downloadReport": "下载报告",
+    "addUser": "添加用户",
+    "notificationSettings": "通知设置",
+    "manageNotifications": "管理您的通知偏好",
+    "newsletterSubscription": "邮件订阅",
+    "manageNewsletter": "管理您的邮件订阅偏好",
+    "subscribeToNewsletter": "订阅邮件",
+    "changeAnytime": "您可以随时更改订阅偏好",
+    "emailNotifications": "邮件通知",
+    "chooseNotifications": "选择您希望接收的邮件通知",
+    "marketingEmails": "营销邮件",
+    "securityAlerts": "安全警报",
+    "productUpdates": "产品更新",
+    "recentActivity": "最近活动",
+    "latestActivity": "您的最新账户活动",
+    "articles": {
+      "title": "文章管理",
+      "description": "管理您的所有文章内容",
+      "createArticle": "创建文章",
+      "createDescription": "创建一篇新的文章",
+      "editArticle": "编辑文章",
+      "deleteArticle": "删除文章",
+      "viewArticle": "查看文章",
+      "status": "状态",
+      "visibility": "访问权限",
+      "language": "语言",
+      "isPinned": "置顶",
+      "actions": "操作",
+      "search": "搜索文章...",
+      "filter": "筛选",
+      "all": "全部",
+      "draft": "草稿",
+      "published": "已发布",
+      "archived": "已归档",
+      "public": "公开",
+      "authenticated": "登录用户",
+      "premium": "付费用户",
+      "yes": "是",
+      "no": "否",
+      "confirmDelete": "确认删除",
+      "deleteConfirmMessage": "确定要删除这篇文章吗？此操作不可撤销。",
+      "cancel": "取消",
+      "delete": "删除",
+      "form": {
+        "title": "标题",
+        "titlePlaceholder": "输入文章标题",
+        "slug": "URL 别名",
+        "slugPlaceholder": "url-friendly-slug",
+        "description": "描述",
+        "descriptionPlaceholder": "文章描述",
+        "content": "内容",
+        "contentPlaceholder": "开始编写您的文章...",
+        "coverImage": "封面图",
+        "selectCoverImage": "选择封面图",
+        "tags": "标签",
+        "tagsPlaceholder": "输入标签，按回车添加",
+        "language": "语言",
+        "status": "状态",
+        "visibility": "访问权限",
+        "isPinned": "置顶文章",
+        "saveDraft": "保存草稿",
+        "publish": "发布文章",
+        "update": "更新文章",
+        "preview": "预览",
+        "basicInfo": "基本信息",
+        "advancedSettings": "高级设置",
+        "contentEditor": "内容编辑"
+      }
+    }
+  },
+  "docs": {
+    "title": "文档",
+    "search": "搜索文档...",
     "toc": "目录",
-    "tocNoHeadings": "没有标题",
-    "lastUpdate": "最后更新",
-    "chooseLanguage": "选择语言",
+    "editPage": "编辑此页",
+    "lastUpdated": "最后更新",
     "nextPage": "下一页",
     "previousPage": "上一页"
+  },
+  "faq": {
+    "heading": "常见问题",
+    "description": "在这里找到我们产品的常见问题答案。找不到您要找的内容？联系我们的客服团队。",
+    "supportHeading": "需要更多帮助？",
+    "supportDescription": "我们专业的客服团队将为您解答任何问题或疑虑。请与我们联系获得个性化服务。",
+    "supportButtonText": "联系客服",
+    "items": [
+      {
+        "question": "退换政策是什么？",
+        "answer": "您可以在购买后30天内退回任何商品并获得全额退款，前提是商品保持原始状态。"
+      },
+      {
+        "question": "如何跟踪我的订单？",
+        "answer": "订单发货后，您将收到包含跟踪号的邮件。您可以在我们网站上使用此号码跟踪订单。"
+      },
+      {
+        "question": "你们提供国际运输吗？",
+        "answer": "是的，我们运送到全球大多数国家。运费和递送时间因目的地而异。"
+      },
+      {
+        "question": "下单后可以修改订单吗？",
+        "answer": "您可以在下单后24小时内通过联系我们的客服团队来修改订单。"
+      },
+      {
+        "question": "你们接受哪些付款方式？",
+        "answer": "我们接受所有主要信用卡、PayPal和Apple Pay。"
+      },
+      {
+        "question": "如何联系客服？",
+        "answer": "您可以通过邮箱 support@example.com 或拨打 1-800-123-4567 联系我们的客服团队。"
+      },
+      {
+        "question": "批量购买有折扣吗？",
+        "answer": "是的，我们为批量购买提供折扣。请联系我们的销售团队了解更多信息。"
+      }
+    ]
+  },
+  "error": {
+    "notFound": {
+      "title": "页面未找到！",
+      "description": "看起来您正在寻找的页面不存在或可能已被移除。",
+      "goBack": "返回",
+      "backToHome": "回到首页"
+    }
+  },
+  "sidebar": {
+    "dashboard": "仪表板",
+    "home": "首页",
+    "analytics": "分析",
+    "users": "用户",
+    "documents": "文档",
+    "files": "文件管理",
+    "articles": "文章管理",
+    "billing": "账单",
+    "security": "安全",
+    "notifications": "通知",
+    "settings": "设置",
+    "profile": "个人资料",
+    "userMenu": "用户菜单"
   },
   "userMenu": {
     "user": "用户",
@@ -40,5 +226,142 @@
     "settings": "设置",
     "toggleMode": "切换模式",
     "logout": "退出登录"
+  },
+  "settings": {
+    "title": "设置",
+    "description": "管理您的账户设置和偏好",
+    "profile": {
+      "title": "个人资料",
+      "description": "管理您的个人信息"
+    },
+    "security": {
+      "title": "安全",
+      "description": "管理您的安全设置"
+    },
+    "notifications": {
+      "title": "通知",
+      "description": "管理您的通知偏好"
+    },
+    "billing": {
+      "title": "账单",
+      "description": "管理您的订阅和付款"
+    }
+  },
+  "profile": {
+    "title": "个人资料",
+    "description": "管理您的个人信息和偏好设置",
+    "save": "保存",
+    "avatar": {
+      "title": "您的头像",
+      "description": "要更改您的头像，请点击此块中的图片并从您的计算机中选择一个文件上传。"
+    },
+    "language": {
+      "title": "您的语言",
+      "description": "要更改应用程序的语言，请从列表中选择一种语言并点击保存。",
+      "label": "语言"
+    },
+    "name": {
+      "title": "您的姓名",
+      "placeholder": "输入您的姓名"
+    },
+    "email": {
+      "title": "您的邮箱",
+      "description": "要更改您的邮箱，请输入新邮箱并点击保存。您需要确认新邮箱才能生效。",
+      "placeholder": "输入您的邮箱地址"
+    }
+  },
+  "billing": {
+    "title": "账单设置",
+    "description": "管理您的订阅计划和付款方式",
+    "currentPlan": "当前计划",
+    "changePlan": "更改计划",
+    "choosePlan": "选择计划",
+    "monthly": "月付",
+    "yearly": "年付",
+    "free": "免费",
+    "pro": "专业版",
+    "lifetime": "终身版",
+    "enterprise": "企业版",
+    "active": "激活",
+    "recommended": "推荐",
+    "bestForTeams": "最适合团队",
+    "buyOnce": "一次购买，永久使用",
+    "customPlan": "定制计划，满足您的需求",
+    "features": {
+      "amazingFeature": "另一个惊人功能",
+      "limitedSupport": "有限支持",
+      "fullSupport": "完整支持",
+      "noRecurringCosts": "无重复费用",
+      "extendedSupport": "扩展支持",
+      "unlimitedProjects": "无限项目",
+      "enterpriseSupport": "企业级支持"
+    },
+    "pricing": {
+      "freeTrialDays": "天免费试用",
+      "perMonth": "/ 月",
+      "contactSales": "联系销售"
+    },
+    "actions": {
+      "choosePlan": "选择计划",
+      "contactSales": "联系销售"
+    }
+  },
+  "security": {
+    "title": "安全",
+    "description": "管理您的安全设置",
+    "resetPassword": {
+      "title": "重置密码",
+      "subtitle": "重置密码以启用邮箱登录",
+      "description": "重置您的密码将允许您使用邮箱和密码登录，除了您的社交登录方式。您将收到一封包含重置密码说明的邮件",
+      "button": "重置密码"
+    },
+    "deleteAccount": {
+      "title": "删除账户",
+      "subtitle": "永久删除您的账户和所有内容",
+      "description": "此操作不可逆转，请谨慎操作",
+      "button": "删除账户"
+    }
+  },
+  "blog": {
+    "title": "技术博客",
+    "description": "分享技术见解、最佳实践和开发经验",
+    "backToList": "返回博客列表",
+    "readingTime": "分钟阅读",
+    "aboutReadingTime": "约 {time} 分钟阅读",
+    "noArticles": "暂无博客文章",
+    "shareArticle": "喜欢这篇文章？分享给更多人吧！",
+    "backToBlog": "返回博客",
+    "author": "作者",
+    "publishedOn": "发布于",
+    "tags": "标签"
+  },
+  "articles": {
+    "title": "技术文章",
+    "description": "探索最新的技术见解和深度分析",
+    "readMore": "阅读更多",
+    "backToList": "返回文章列表",
+    "tags": "标签",
+    "author": "作者",
+    "publishedAt": "发布时间",
+    "readingTime": "阅读时间",
+    "loginRequired": "此文章需要登录后查看",
+    "premiumRequired": "此文章仅限付费用户查看",
+    "allTags": "所有标签",
+    "filterByTag": "按标签筛选",
+    "noArticles": "暂无文章",
+    "loadMore": "加载更多",
+    "access": {
+      "loginRequired": "需要登录",
+      "premiumRequired": "付费内容",
+      "subscriptionExpired": "订阅已过期",
+      "loginToView": "请登录后查看完整内容",
+      "upgradeToView": "此内容仅限付费用户访问，升级您的订阅以解锁",
+      "renewToView": "您的订阅已过期，请续费以继续访问付费内容",
+      "loginButton": "立即登录",
+      "signupButton": "注册账户",
+      "upgradeButton": "升级订阅",
+      "renewButton": "续费订阅",
+      "browseFreeButton": "浏览免费内容"
+    }
   }
 }
