feat(auth): improve auth guard and login form with i18n support
refactor auth guard to use pathname for callback URL and add translations
update login form to support i18n and improve redirect handling
add new auth translations in en.json and zh.json
remove unused dashboard articles pages

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -68,7 +68,23 @@
     "accessDenied": "Access Denied",
     "loginRequired": "Please login to access this page",
     "goToLogin": "Go to Login",
-    "retry": "Retry"
+    "retry": "Retry",
+    "refreshSession": "Refresh Session",
+    "welcomeBack": "Welcome back",
+    "loginWithSocial": "Sign in with your GitHub or Google account",
+    "loggingIn": "Signing in...",
+    "orUseEmail": "Or continue with email",
+    "emailPlaceholder": "m@example.com",
+    "noAccount": "Don't have an account?",
+    "signUpLink": "Sign up",
+    "termsAndPrivacy": {
+      "prefix": "By continuing, you agree to our",
+      "middle": "and",
+      "suffix": "."
+    },
+    "termsOfService": "Terms of Service",
+    "privacyPolicy": "Privacy Policy",
+    "closeError": "Close"
   },
   "dashboard": {
     "title": "Dashboard",
