feat(auth): add signup page with email and social login options
Implement signup functionality with email/password and social providers (GitHub, Google)
Add i18n support for signup form
Expose auth store hooks for signup operations

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -84,7 +84,19 @@
     },
     "termsOfService": "Terms of Service",
     "privacyPolicy": "Privacy Policy",
-    "closeError": "Close"
+    "closeError": "Close",
+    "name": "Name",
+    "namePlaceholder": "John Doe",
+    "confirmPassword": "Confirm Password",
+    "passwordMismatch": "Passwords do not match",
+    "signupWithSocial": "Sign up with your GitHub or Google account",
+    "githubSignUp": "Sign up with GitHub",
+    "googleSignUp": "Sign up with Google",
+    "signingUp": "Signing up...",
+    "orContinueWith": "Or continue with",
+    "signUpButton": "Sign Up",
+    "alreadyHaveAccount": "Already have an account?",
+    "loginLink": "Login"
   },
   "dashboard": {
     "title": "Dashboard",
