feat(profile): implement profile management with avatar upload
- Add profile types and hooks for state management
- Implement avatar upload functionality with server action
- Add toast notifications for profile updates
- Update auth store to support user profile updates
- Add i18n messages for profile operations
- Add error handling for profile operations

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -28,7 +28,9 @@
       "articleCreated": "Article created successfully",
       "articleUpdated": "Article updated successfully",
       "articleDeleted": "Article deleted successfully",
-      "operationSuccess": "Operation successful"
+      "operationSuccess": "Operation successful",
+      "nameUpdated": "Name updated successfully",
+      "avatarUpdated": "Avatar updated successfully"
     },
     "error": {
       "titleRequired": "Please enter article title",
@@ -37,7 +39,14 @@
       "operationFailed": "Operation failed",
       "deleteFailed": "Delete failed",
       "submitFailed": "Submit failed, please try again",
-      "retryLater": "Please try again later"
+      "retryLater": "Please try again later",
+      "nameEmpty": "Name cannot be empty",
+      "nameUpdateFailed": "Name update failed",
+      "avatarUpdateFailed": "Avatar update failed",
+      "fileUploadFailed": "File upload failed"
+    },
+    "info": {
+      "nameNotChanged": "Name has not changed"
     }
   },
   "nav": {
