feat(login): implement login functionality with email and social providers
- Add login form component with email and social login options
- Create useLogin hook to handle login logic and state management
- Add i18n messages for login success/error cases
- Implement toast notifications for login feedback

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -30,7 +30,8 @@
       "articleDeleted": "Article deleted successfully",
       "operationSuccess": "Operation successful",
       "nameUpdated": "Name updated successfully",
-      "avatarUpdated": "Avatar updated successfully"
+      "avatarUpdated": "Avatar updated successfully",
+      "loginSuccess": "Login successful"
     },
     "error": {
       "titleRequired": "Please enter article title",
@@ -43,7 +44,9 @@
       "nameEmpty": "Name cannot be empty",
       "nameUpdateFailed": "Name update failed",
       "avatarUpdateFailed": "Avatar update failed",
-      "fileUploadFailed": "File upload failed"
+      "fileUploadFailed": "File upload failed",
+      "loginFailed": "Login failed",
+      "socialLoginFailed": "Social login failed"
     },
     "info": {
       "nameNotChanged": "Name has not changed"
