--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -30,7 +30,8 @@
       "articleDeleted": "文章删除成功",
       "operationSuccess": "操作成功",
       "nameUpdated": "姓名更新成功",
-      "avatarUpdated": "头像更新成功"
+      "avatarUpdated": "头像更新成功",
+      "loginSuccess": "登录成功"
     },
     "error": {
       "titleRequired": "请输入文章标题",
@@ -43,7 +44,9 @@
       "nameEmpty": "姓名不能为空",
       "nameUpdateFailed": "姓名更新失败",
       "avatarUpdateFailed": "头像更新失败",
-      "fileUploadFailed": "文件上传失败"
+      "fileUploadFailed": "文件上传失败",
+      "loginFailed": "登录失败",
+      "socialLoginFailed": "社交登录失败"
     },
     "info": {
       "nameNotChanged": "姓名未发生变化"
