feat(i18n): add blocks translations and restructure routes
refactor(layouts): move navbar and footer to root layout
feat(blocks): implement components library with categories
feat(blog): reorganize blog routes and pages

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -376,6 +376,10 @@
     "publishedOn": "Published on",
     "tags": "Tags"
   },
+  "blocks": {
+    "title": "Components Library",
+    "description": "Explore our carefully crafted component collection to boost your development efficiency"
+  },
   "articles": {
     "title": "Tech Articles",
     "description": "Explore the latest technical insights and in-depth analysis",
