feat(i18n): replace articles with config in sidebar navigation
refactor(auth): improve error handling in permission checks
perf(server): optimize dynamic rendering for admin pages
style(actions): clean up formatting in server actions

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -251,7 +251,7 @@
     "users": "Users",
     "documents": "Documents",
     "files": "File Manager",
-    "articles": "Articles",
+    "config": "Configuration",
     "billing": "Billing",
     "security": "Security",
     "notifications": "Notifications",
