--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -251,7 +251,7 @@
     "users": "用户",
     "documents": "文档",
     "files": "文件管理",
-    "articles": "文章管理",
+    "config": "配置",
     "billing": "账单",
     "security": "安全",
     "notifications": "通知",
